--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -663,5 +663,6 @@
     <string name="previewer_notes">ملاحظات المعاين</string>
     <string name="send_feed">ارسال شكوى</string>
     <string name="send_offer_note">في حالة انه لم يتم اضافة "معلومات الشركة" ويمكنه الذهاب للملف</string>
+    <string name="company_info">معلومات عن الشركة</string>
 
 </resources>
