--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -323,6 +323,39 @@
     <string name="_00000">00000</string>
     <string name="biometric_login">Biometric Login</string>
     <string name="log_in_using_your_biometric_credential">Log in using your biometric credential</string>
+    <string name="phone_number_incorrect">Phone number is incorrect</string>
+    <string name="no_biometric_hardware_available">No biometric hardware available</string>
+    <string name="password_does_not_match">Password does not match</string>
+    <string name="Website_added">Website has been added</string>
+    <string name="amoun_company_service">"The amount is for company service"</string>
+    <string name="ryal">" Riyal "</string>
+    <string name="user_name">User name</string>
+    <string name="Company_name">Company name</string>
+    <string name="Activation_code_incorrect">Activation code is incorrect</string>
+    <string name="biometric_hardware_unavailable">Biometric hardware unavailable</string>
+    <string name="no_biometric_data_enrolled">No biometric data enrolled</string>
+    <string name="authentication_error">"Authentication error: "</string>
+    <string name="authentication_succeeded">Authentication succeeded!</string>
+    <string name="authentication_failed">Authentication failed</string>
+    <string name="splash_painter_error">Splash painter error</string>
+    <string name="splash_reviewer_error">Splash reviewer error</string>
+    <string name="painter_has_been_deleted">Painter has been deleted</string>
+    <string name="enter_e_mail_please">Enter E-Mail Please</string>
+    <string name="send_success">Send Success</string>
+    <string name="reviewer_has_been_deleted">Reviewer has been deleted</string>
+    <string name="Company">Company</string>
+    <string name="cost_">Cost: </string>
+    <string name="evaluation_company_name">Evaluation company name: </string>
+    <string name="Property_Inspector_Report">Property Inspector Report</string>
+    <string name="permission_denied">Permission Denied</string>
+    <string name="enter_password">Enter password</string>
+    <string name="the_offer_is_rejected">The offer is rejected</string>
+    <string name="qaimha">Qaimha</string>
+    <string name="show_file">Show file</string>
+    <string name="server_error">Server Error: </string>
+    <string name="response_body_is_null">Response body is null</string>
+    <string name="request_failed">Request Failed: </string>
+    <string name="year">" Year "</string>
 
     <string-array name="spinner_items">
         <item>Qaimha</item>
