add language header

--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -119,7 +119,7 @@
     <string name="submitPreviewReports">إرسال تقارير المعاينة</string>
     <string name="pullBalance">سحب الرصيد</string>
     <string name="addLicence">اضف بطاقة ضريبية</string>
-    <string name="listOfRealstate">قائمة العقارات</string>
+    <string name="listOfRealstate">الرئيسية</string>
     <string name="sendRateOffer">ارسال عرض تقييم</string>
     <string name="projects">المشاريع</string>
     <string name="showDetails">مشاهدة التفاصيل</string>
