--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -18,6 +18,7 @@
     <string name="welcome">اهلا بك</string>
     <string name="display">عرض</string>
     <string name="confirm">تأكيد</string>
+    <string name="save">حفظ</string>
     <string name="accepted">مقبول</string>
     <string name="accept">قبول</string>
     <string name="contactData">بيانات الاتصال</string>
