--- a/app/src/main/res/values-ar/strings.xml
+++ b/app/src/main/res/values-ar/strings.xml
@@ -41,7 +41,7 @@
     <string name="chooseCity">اختر المدينة</string>
     <string name="chooseCountry">اختر الدولة</string>
     <string name="chooseNeighborhood">اختر المنطقة</string>
-    <string name="addEstatePhoto">اضافة صور العقار</string>
+    <string name="addEstatePhoto">اضافة الصور</string>
     <string name="addLocation">اضافة موقع</string>
     <string name="client_company_phone">رقم الجوال</string>
     <string name="editeProfile">تعديل الملف الشخصي</string>
