--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,7 +40,7 @@
     <string name="chooseCity">Choose city</string>
     <string name="chooseCountry">Choose country</string>
     <string name="chooseNeighborhood">Choose neighborhood</string>
-    <string name="addEstatePhoto">Add property photos</string>
+    <string name="addEstatePhoto">Add photos</string>
     <string name="addLocation">Add location</string>
     <string name="client_company_phone">Phone number</string>
     <string name="editeProfile">Edit profile</string>
